# Djongo-tutorial

./: LICENSE  Makefile  docker-compose.yml  pyproject.toml
apps/api/: urls.py
apps/cards/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py
apps/core/: managers.py  models.py  paginator.py  query.py
apps/public_chat/: __init__.py  admin.py  apps.py  managers.py  models.py
apps/public_chat/migrations/: 0001_initial.py
config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  python.env
